--- a/data_types_and_variables.ipynb
+++ b/data_types_and_variables.ipynb
@@ -735,36 +735,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 40,
    "id": "7239c31a",
    "metadata": {},
    "outputs": [],
    "source": [
     "## A student can be enrolled to a class only if the class is not full and \n",
-    "## the class schedule does not conflict with her current schedule."
+    "## the class schedule does not conflict with her current schedule.\n",
+    "\n",
+    "class_not_full = True\n",
+    "Class_schedule_not_conflict = True\n",
+    "\n",
+    "Student_can_enroll = class_not_full and Class_schedule_not_conflict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "id": "41d9d5d5",
    "metadata": {},
    "outputs": [],
    "source": [
     "## A product offer can be applied only if people buys more than 2 items, \n",
     "## and the offer has not expired. Premium members do not need to buy a specific amount \n",
-    "## of products.\n"
+    "## of products.\n",
+    "\n",
+    "bought_more_than_two = False\n",
+    "offer_not_expired = True\n",
+    "premium_member = True\n",
+    "\n",
+    "offer_valid= offer_not_expired and (bought_more_than_two or premium_member)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "id": "f4247b0f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "username = 'codeup'\n",
-    "password = 'notastrongpassword'"
+    "password = 'notastrongpassword'\n",
+    "\n",
+    "at_least_5_char = len(password) > 5\n",
+    "at_least_5_char"
    ]
   },
   {
@@ -774,8 +799,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "username = 'brad_gauvin'\n",
-    "password = 'betterpassword'"
+    "username_new= 'brad_gauvin'\n",
+    "password_new = 'betterpassword'\n",
+    "\n",
+    "username_20_or_less_char = len(username_new)<20\n",
+    "password_dif = password != password_new"
    ]
   },
   {
