added bonus question

--- a/data_types_and_variables.ipynb
+++ b/data_types_and_variables.ipynb
@@ -684,17 +684,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 41,
    "id": "fb5156d9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "18"
+       "27"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,22 +704,22 @@
     "##Brother Bear (for 5 days, they love it), and Hercules (1 day, you don't know yet if they're going to like it). \n",
     "## If price for a movie per day is 3 dollars, how much will you have to pay?\n",
     "\n",
-    "6 * 3"
+    "9 * 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "id": "46be2d49",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7680"
+       "7420"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,15 +730,26 @@
     "## and Facebook 350. How much will you receive in payment for this week? You worked 10 hours\n",
     "## for Facebook, 6 hours for Google and 4 hours for Amazon.\n",
     "\n",
-    "(400 * 10) + (380 * 6) + (350 * 4)"
+    "(400 * 6) + (380 * 4) + (350 * 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "id": "7239c31a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## A student can be enrolled to a class only if the class is not full and \n",
     "## the class schedule does not conflict with her current schedule.\n",
@@ -746,15 +757,27 @@
     "class_not_full = True\n",
     "Class_schedule_not_conflict = True\n",
     "\n",
-    "Student_can_enroll = class_not_full and Class_schedule_not_conflict"
+    "Student_can_enroll = class_not_full and Class_schedule_not_conflict\n",
+    "Student_can_enroll"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 45,
    "id": "41d9d5d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## A product offer can be applied only if people buys more than 2 items, \n",
     "## and the offer has not expired. Premium members do not need to buy a specific amount \n",
@@ -764,7 +787,8 @@
     "offer_not_expired = True\n",
     "premium_member = True\n",
     "\n",
-    "offer_valid= offer_not_expired and (bought_more_than_two or premium_member)"
+    "offer_valid= offer_not_expired and (bought_more_than_two or premium_member)\n",
+    "offer_valid"
    ]
   },
   {
@@ -794,22 +818,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "id": "9a7b5b26",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "username_new= 'brad_gauvin'\n",
     "password_new = 'betterpassword'\n",
     "\n",
     "username_20_or_less_char = len(username_new)<20\n",
-    "password_dif = password != password_new"
+    "password_dif = password != password_new\n",
+    "password_dif"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "50d753a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "books = [\n",
+    "    {\n",
+    "        \"title\": \"Enders Game\",\n",
+    "        \"author\": \"Carl Orson Scott\",\n",
+    "        \"genre\": \"Science Fiction\"\n",
+    "    },\n",
+    "     {\n",
+    "        \"title\": \"Genetic Algorithms and Machine Learning for Programmers\",\n",
+    "        \"genre\": \"Education\",\n",
+    "        \"author\": \"Frances Buontempo\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"title\": \"The Visual Display of Quantitative Information\",\n",
+    "        \"genre\": \"Education\",\n",
+    "        \"author\": \"Edward Tufte\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"title\": \"Practical Object-Oriented Design\",\n",
+    "        \"author\": \"Sandi Metz\",\n",
+    "        \"genre\": \"Education\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"title\": \"Weapons of Math Destruction\",\n",
+    "        \"author\": \"Cathy O'Neil\",\n",
+    "        \"genre\": \"Eduction\"\n",
+    "    },\n",
+    "    {\n",
+    "         \"title\": \"Harry Potter and the Philosophers Stone\",\n",
+    "        \"author\": \"J.K. Rowling\",\n",
+    "        \"genre\": \"Fantasy\"\n",
+    "    },\n",
+    "     {\n",
+    "         \"title\": \"Harry Potter and the goblet of fire\",\n",
+    "        \"author\": \"J.K. Rowling\",\n",
+    "        \"genre\": \"Fantasy\"\n",
+    "    },\n",
+    "     {\n",
+    "         \"title\": \"Ride of a lifetine\",\n",
+    "        \"author\": \"Bob Iger\",\n",
+    "        \"genre\": \"Non-Fiction\"\n",
+    "    },\n",
+    "    {\n",
+    "         \"title\": \"Snowball\",\n",
+    "        \"author\": \"Warren Buffet\",\n",
+    "        \"genre\": \"Non-Fiction\"\n",
+    "    }\n",
+    "    \n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "532af800",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'Enders Game' by ''Carl Orson Scott' in the genre of ''Science Fiction\n",
+      "'Genetic Algorithms and Machine Learning for Programmers' by ''Frances Buontempo' in the genre of ''Education\n",
+      "'The Visual Display of Quantitative Information' by ''Edward Tufte' in the genre of ''Education\n",
+      "'Practical Object-Oriented Design' by ''Sandi Metz' in the genre of ''Education\n",
+      "'Weapons of Math Destruction' by ''Cathy O'Neil' in the genre of ''Eduction\n",
+      "'Harry Potter and the Philosophers Stone' by ''J.K. Rowling' in the genre of ''Fantasy\n",
+      "'Harry Potter and the goblet of fire' by ''J.K. Rowling' in the genre of ''Fantasy\n",
+      "'Ride of a lifetine' by ''Bob Iger' in the genre of ''Non-Fiction\n",
+      "'Snowball' by ''Warren Buffet' in the genre of ''Non-Fiction\n"
+     ]
+    }
+   ],
+   "source": [
+    "for book in books:\n",
+    "    print(f\"'{book['title']}' by ''{book['author']}' in the genre of ''{book['genre']}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50d753a0",
+   "id": "6406ab7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while True:\n",
+    "    genre_input = input(\"Pick a genre : \")\n",
+    "    if genre_input.title() in [book['genre'] for book in books]:\n",
+    "        book_titles = [book[\"title\"] for book in books if book[\"genre\"].lower() == genre_input.lower()]\n",
+    "        print(*book_titles, sep = \"\\n\")\n",
+    "    else:\n",
+    "        print(\"Sorry, genre not available\")\n",
+    "    reloop = input(\"Would you like to try again? y/n :\")\n",
+    "    \n",
+    "    if reloop.lower() == 'y':\n",
+    "        continue\n",
+    "    else:\n",
+    "        print('Thanks and goodluck!')\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a58918d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while True:\n",
+    "    genre_input = input(\"Pick a genre : \")\n",
+    "    if genre_input.title() in [book['genre'] for book in books]:\n",
+    "        book_titles = [book[\"title\"] for book in books if book[\"genre\"].lower() == genre_input.lower()]\n",
+    "        print(*book_titles, sep = \"\\n\")\n",
+    "    else:\n",
+    "        print(f\"Sorry, there are no books about {genre_input}\")\n",
+    "    promp = input(\"Would you like to pick a different genre? (y/n) :\")\n",
+    "\n",
+    "    if promp.lower() == 'y':\n",
+    "        continue \n",
+    "    else:\n",
+    "        print(\"Have a nice day!\")\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffc2beae",
    "metadata": {},
    "outputs": [],
    "source": []
