last exercise added

--- a/control_structures_exercises_2_nohelp.ipynb
+++ b/control_structures_exercises_2_nohelp.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d17a64eb",
+   "id": "d52da711",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0fcacdcd",
+   "id": "997310d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "0c39eda9",
+   "id": "19839a52",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0d031ee",
+   "id": "f286406e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "5f7e42c4",
+   "id": "d82247b0",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "249918bf",
+   "id": "83f56ab2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "47c54887",
+   "id": "a09750c0",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "1716721a",
+   "id": "034e2284",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "125bf11d",
+   "id": "faeafe6f",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "51bff23d",
+   "id": "e493d052",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "6db6244d",
+   "id": "6a648c93",
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "b5c4e583",
+   "id": "614ff0a4",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "772a6c44",
+   "id": "a7007825",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "98df87b6",
+   "id": "9ed260de",
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "0b8fbe3a",
+   "id": "d253fbb4",
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "e8d2424e",
+   "id": "7e7d2211",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "614ebeb7",
+   "id": "e56effea",
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9811716",
+   "id": "73f858cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "23ce0758",
+   "id": "fe541863",
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "314c2672",
+   "id": "0c81f0c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "1c90a68a",
+   "id": "33076503",
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "3f4966b2",
+   "id": "77952ffd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "a4eb5f22",
+   "id": "76bb8ee2",
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +800,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "a42d04c9",
+   "id": "ea59476e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "8a92b700",
+   "id": "92358219",
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +869,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc49a50b",
+   "id": "6ceae562",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,8 +891,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a8acbeed",
+   "execution_count": 111,
+   "id": "b2e0f808",
    "metadata": {},
    "outputs": [
     {
@@ -901,9 +901,8 @@
      "text": [
       "what percentage is the grade? (whole number) 99\n",
       "99 is an 'A+'\n",
-      "Would you like to try again? (y/n): y\n",
-      "what percentage is the grade? (whole number) 97\n",
-      "97 is an 'A'\n"
+      "Would you like to try again? (y/n): 87\n",
+      "This was fun\n"
      ]
     }
    ],
@@ -941,16 +940,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2c085350",
+   "execution_count": 112,
+   "id": "32af8ef7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "books = [\n",
+    "    {\n",
+    "        'title':'title1',\n",
+    "        'author':'author1',\n",
+    "        'genre': 'genre1'\n",
+    "    },\n",
+    "    {\n",
+    "        'title':'title2',\n",
+    "        'author':'author2',\n",
+    "        'genre': 'genre2'\n",
+    "    },\n",
+    "    {\n",
+    "        'title':'title3',\n",
+    "        'author':'author3',\n",
+    "        'genre': 'genre3'\n",
+    "    },\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "1797eaf2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'title': 'title1', 'author': 'author1', 'genre': 'genre1'},\n",
+       " {'title': 'title2', 'author': 'author2', 'genre': 'genre2'},\n",
+       " {'title': 'title3', 'author': 'author3', 'genre': 'genre3'}]"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[book for book in books ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "3d1a8eba",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (2011798804.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [114]\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(f\"The book {book['title']} by {book['author']} belongs to genre {genre['genre']})\u001b[0m\n\u001b[0m                                                                                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+     ]
+    }
+   ],
+   "source": [
+    "for book in books: \n",
+    "    print(f\"The book {book['title']} by {book['author']} belongs to genre {genre['genre']})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "07f882cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter a genre: genre2\n",
+      "No books found\n",
+      "title2\n",
+      "No books found\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_input = input('Please enter a genre: ')\n",
+    "\n",
+    "for book in books: \n",
+    "    if book ['genre'] == user_input:\n",
+    "        print(book['title'])\n",
+    "    else:\n",
+    "        print(\"No books found\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab223728",
+   "id": "b5c5929f",
    "metadata": {},
    "outputs": [],
    "source": []
