--- a/function_exercises.ipynb
+++ b/function_exercises.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bd56a8a8",
+   "id": "d1f874c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b289facb",
+   "id": "27f153ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,10 +25,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8b557bdf",
+   "id": "10efbf0a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# defining function as both number and string\n",
     "def is_two (n):\n",
     "    return n ==2 or n == '2'"
    ]
@@ -36,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6f5efed8",
+   "id": "7c1cb2aa",
    "metadata": {},
    "outputs": [
     {
@@ -51,13 +52,14 @@
     }
    ],
    "source": [
+    "# Test\n",
     "is_two(2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f52628b9",
+   "id": "73988731",
    "metadata": {},
    "outputs": [
     {
@@ -72,13 +74,14 @@
     }
    ],
    "source": [
+    "# Test\n",
     "is_two('2')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f0a96315",
+   "id": "1d55e0b3",
    "metadata": {},
    "outputs": [
     {
@@ -93,13 +96,14 @@
     }
    ],
    "source": [
+    "# Test\n",
     "is_two(3)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d4c42bbb",
+   "id": "a6360753",
    "metadata": {},
    "outputs": [
     {
@@ -114,13 +118,14 @@
     }
    ],
    "source": [
+    "# Test\n",
     "is_two('3')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "34febe46",
+   "id": "1df35e23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,11 +135,12 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2df055f2",
+   "id": "d8325a46",
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_vowel(string):\n",
+    "    # used to identify string \n",
     "    if type(string) == str:\n",
     "        results = string.lower() in ['a','e','i','o','u']\n",
     "        return results\n",
@@ -145,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "5c532a33",
+   "id": "0cbe4c46",
    "metadata": {},
    "outputs": [
     {
@@ -160,13 +166,14 @@
     }
    ],
    "source": [
+    "# Test\n",
     "is_vowel('A')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "36dbf8cd",
+   "id": "4f0accba",
    "metadata": {},
    "outputs": [
     {
@@ -181,13 +188,14 @@
     }
    ],
    "source": [
+    "# Test\n",
     "is_vowel('B')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "06123759",
+   "id": "f3714a42",
    "metadata": {},
    "outputs": [
     {
@@ -202,13 +210,14 @@
     }
    ],
    "source": [
+    "# Test\n",
     "is_vowel('e')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "8ceed373",
+   "id": "25b6f281",
    "metadata": {},
    "outputs": [
     {
@@ -223,13 +232,14 @@
     }
    ],
    "source": [
+    "# Test\n",
     "is_vowel('E')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "662cdf73",
+   "id": "95808c59",
    "metadata": {},
    "outputs": [
     {
@@ -244,13 +254,14 @@
     }
    ],
    "source": [
+    "# Test\n",
     "is_vowel('ae')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "b095b1e2",
+   "id": "b7770ab1",
    "metadata": {},
    "outputs": [
     {
@@ -265,13 +276,14 @@
     }
    ],
    "source": [
+    "# Test\n",
     "is_vowel(1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "93585789",
+   "id": "c8b011fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,12 +294,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "f21761f7",
+   "execution_count": 142,
+   "id": "7eaa1fc7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m<tokenize>:5\u001b[0;36m\u001b[0m\n\u001b[0;31m    else:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
+     ]
+    }
+   ],
    "source": [
     "def is_consonant(string):\n",
+    "    # identify vowels only, and ensure they are not a factor\n",
     "    if type(string) == str:\n",
     "        results = string.lower() not in ['a','e','i','o','u']\n",
     "        return results\n",
@@ -298,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "c87fd601",
+   "id": "22b94005",
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "5f8f0c5a",
+   "id": "1a054e24",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "faad3cf7",
+   "id": "ff3de748",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,15 +373,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "43b6115e",
+   "execution_count": 144,
+   "id": "8ab4861b",
    "metadata": {},
    "outputs": [],
    "source": [
     "def cap_word(string):\n",
+    "    #Ensure word is a string\n",
     "    if type(string) != str:\n",
     "        return False\n",
+    "    # find the first letter in a string\n",
     "    fl = string[0]\n",
+    "    # capitalize the first letter in the string\n",
     "    if is_consonant(fl):\n",
     "        string = string.capitalize()\n",
     "    return string"
@@ -368,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "53affc22",
+   "id": "1c5d527f",
    "metadata": {},
    "outputs": [
     {
@@ -383,13 +408,14 @@
     }
    ],
    "source": [
+    "# Test\n",
     "cap_word('alphabet')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "c7328489",
+   "id": "53b14b24",
    "metadata": {},
    "outputs": [
     {
@@ -404,13 +430,14 @@
     }
    ],
    "source": [
+    "# Test\n",
     "cap_word('beta')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "72902f18",
+   "id": "c046fcac",
    "metadata": {},
    "outputs": [
     {
@@ -425,13 +452,14 @@
     }
    ],
    "source": [
+    "# Test\n",
     "cap_word(4)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "c5abde65",
+   "id": "e8442b2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,13 +470,15 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "c68b69e8",
+   "id": "28676b6e",
    "metadata": {},
    "outputs": [],
    "source": [
     "def calculate_tip (bill, tip_perc = .2):\n",
+    "    # ensure type is not float\n",
     "    if type(bill) != float:\n",
     "        return false\n",
+    "    # Validate tip % is between 0 and 1 \n",
     "    if tip_perc < 0 or tip_perc > 1:\n",
     "        return 'tip between 0 and 1 as decimal (i.e. 0.2 is 20%) placed after bill and a comma (i.e. $.$$, 0.2)'\n",
     "    return tip_perc * bill    "
@@ -457,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "c17743d3",
+   "id": "4d6006ae",
    "metadata": {},
    "outputs": [
     {
@@ -472,13 +502,14 @@
     }
    ],
    "source": [
+    "# Test\n",
     "calculate_tip(20.00)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "d9b3af11",
+   "id": "ceb988c7",
    "metadata": {},
    "outputs": [
     {
@@ -493,13 +524,14 @@
     }
    ],
    "source": [
+    "# Test\n",
     "calculate_tip (20.00, 10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "1a61c1a4",
+   "id": "7ff502b3",
    "metadata": {},
    "outputs": [
     {
@@ -514,13 +546,14 @@
     }
    ],
    "source": [
+    "# Test\n",
     "calculate_tip(20.00, .15)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "e7d8970d",
+   "id": "a02e2c75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,11 +564,12 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "3f17287e",
+   "id": "ea19a522",
    "metadata": {},
    "outputs": [],
    "source": [
     "def apply_discount(price, discount_perc):\n",
+    "    # defining discount amount\n",
     "    discount = price * discount_perc\n",
     "    return price - discount"
    ]
@@ -543,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "2f20f27d",
+   "id": "e758a823",
    "metadata": {},
    "outputs": [
     {
@@ -558,13 +592,14 @@
     }
    ],
    "source": [
+    "# Test\n",
     "apply_discount(100,.1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "81c71157",
+   "id": "974829e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,14 +610,17 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "5f5b08af",
+   "id": "0e2db2fe",
    "metadata": {},
    "outputs": [],
    "source": [
     "def handle_commas(string):\n",
+    "    # Ensure string is not str\n",
     "    if type(string) != str:\n",
     "        return 'string of numbers w/ commas needed'\n",
+    "    # Replacing commas with nothing\n",
     "    string=string.replace(',','')\n",
+    "    # ensure string is a digit\n",
     "    if string.isdigit():\n",
     "        return int(string)\n",
     "    else:\n",
@@ -592,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "56549c25",
+   "id": "aa580343",
    "metadata": {},
    "outputs": [
     {
@@ -607,13 +645,14 @@
     }
    ],
    "source": [
+    "# Test\n",
     "handle_commas(\"1,000\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "3e6a0e2b",
+   "id": "034fb806",
    "metadata": {},
    "outputs": [
     {
@@ -628,13 +667,14 @@
     }
    ],
    "source": [
+    "# Test\n",
     "handle_commas(\"1,234,567\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "7a00934b",
+   "id": "a665658d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +682,9 @@
     "# It should accept a number and return the letter grade associated with that number (A-F).\n",
     "\n",
     "def get_letter_grade(n):\n",
+    "    # validate type is an int or float\n",
     "    if type(n) == int or type(n)== float:\n",
+    "       # return back the range of n as letter grade\n",
     "        if n in range(90,100):\n",
     "            return 'A'\n",
     "        elif n in range(80,90):\n",
@@ -658,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "c663fc1e",
+   "id": "d386a107",
    "metadata": {},
    "outputs": [
     {
@@ -673,13 +715,14 @@
     }
    ],
    "source": [
+    "# Test\n",
     "get_letter_grade(79)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "5d9a7586",
+   "id": "f62379c1",
    "metadata": {},
    "outputs": [
     {
@@ -694,13 +737,14 @@
     }
    ],
    "source": [
+    "# Test\n",
     "get_letter_grade(98)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "a9c18d01",
+   "id": "11af7e6a",
    "metadata": {},
    "outputs": [
     {
@@ -715,13 +759,14 @@
     }
    ],
    "source": [
+    "# Test\n",
     "get_letter_grade('A')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "9124d747",
+   "id": "d9a3a00c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,14 +776,17 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "c03c6f3a",
+   "id": "ac1df3ca",
    "metadata": {},
    "outputs": [],
    "source": [
     "def remove_vowels(string):\n",
+    "    # ensure that the string is not str\n",
     "    if type(string) != str:\n",
     "        return 'Need a word'\n",
+    "    # defining output as nothing in string\n",
     "    output = ''\n",
+    "    # using the prior is_consonant to return only consonants in the str\n",
     "    for letter in string:\n",
     "        if is_consonant(letter):\n",
     "            output +=letter\n",
@@ -748,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "7387322a",
+   "id": "e4c33b9e",
    "metadata": {},
    "outputs": [
     {
@@ -763,13 +811,14 @@
     }
    ],
    "source": [
+    "# Test\n",
     "remove_vowels('alpha')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "912da3ff",
+   "id": "de1a6039",
    "metadata": {},
    "outputs": [
     {
@@ -784,13 +833,14 @@
     }
    ],
    "source": [
+    "# Test\n",
     "remove_vowels(42)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "3b9a37cf",
+   "id": "e9ee7c43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,17 +859,22 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "00370f88",
+   "id": "8cc76f46",
    "metadata": {},
    "outputs": [],
    "source": [
     "def normalized_name(string):\n",
+    "    # output is nothing\n",
     "    output = ''\n",
+    "    # ensure string is in lower case\n",
     "    string = string.lower()\n",
+    "    # ensure each character in string is identified to include spaces; return output\n",
     "    for character in string:\n",
     "        if character.isidentifier() or character ==' ':\n",
     "            output += character\n",
+    "    # stripping spaces out of output\n",
     "    output = output.strip()\n",
+    "    # replacing spaces with underscores\n",
     "    output = output.replace(' ','_')\n",
     "    return output"
    ]
@@ -827,7 +882,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "3a69ec34",
+   "id": "5bb67faa",
    "metadata": {},
    "outputs": [
     {
@@ -842,13 +897,14 @@
     }
    ],
    "source": [
+    "# Test\n",
     "normalized_name(\"First Name\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "87640be9",
+   "id": "9a4b441e",
    "metadata": {},
    "outputs": [
     {
@@ -863,13 +919,14 @@
     }
    ],
    "source": [
+    "# Test\n",
     "normalized_name(' % Completed')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "b802f335",
+   "id": "063998c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,12 +939,14 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "e3a695d4",
+   "id": "907a6a45",
    "metadata": {},
    "outputs": [],
    "source": [
     "def cumulative_sum(n_list):\n",
+    "    # define oupt as a list\n",
     "    output = []\n",
+    "    #using enumerate to look at each i and then add the next number, then append to correct value\n",
     "    for i, num in enumerate(n_list):\n",
     "        sum_list = sum(n_list[:i + 1])\n",
     "        output.append(sum_list)\n",
@@ -897,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "29610f9c",
+   "id": "1b13d4b1",
    "metadata": {},
    "outputs": [
     {
@@ -912,13 +971,14 @@
     }
    ],
    "source": [
+    "# Test\n",
     "cumulative_sum([1, 1, 1])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "3983202e",
+   "id": "636787b6",
    "metadata": {},
    "outputs": [
     {
@@ -933,13 +993,14 @@
     }
    ],
    "source": [
+    "# Test\n",
     "cumulative_sum([1, 2, 3, 4])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aca9696d",
+   "id": "ba116230",
    "metadata": {},
    "outputs": [],
    "source": []
